--- a/pom.xml
+++ b/pom.xml
@@ -46,11 +46,20 @@
   </dependencies>
   <build>
     <finalName>Project1</finalName>
+	  <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-install-plugin</artifactId>
+          <version>2.5.2</version>
+        </plugin>
+      </plugins>
+    </pluginManagement>
 	<plugins>
 	<plugin>
     <groupId>org.apache.maven.plugins</groupId>
     <artifactId>maven-install-plugin</artifactId>
-    <version>3.5.2</version>
+    <version>2.5.2</version>
     <executions>
         <execution>
             <id>install-oracle-jdbc</id>
