--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,10 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-install-plugin</artifactId>
           <version>2.5.2</version>
+	  <configuration>
+	   <source>1.8</source>
+	   <target>1.8</target>
+	</configuration>
         </plugin>
       </plugins>
     </pluginManagement>
