--- a/pom.xml
+++ b/pom.xml
@@ -20,12 +20,17 @@
       <version>4.0.1</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+ 	  <groupId>javax.xml.bind</groupId>
+	  <artifactId>jaxb-api</artifactId>
+	  <version>2.3.0</version>
+	</dependency>
     <!-- https://mvnrepository.com/artifact/com.oracle/ojdbc14 -->
 	<dependency>
-		<groupId>com.oracle</groupId>
-		<artifactId>ojdbc7</artifactId>
-		<version>12.1.0</version>
-	</dependency>
+  <groupId>org.postgresql</groupId>
+  <artifactId>postgresql</artifactId>
+  <version>42.2.16.jre7</version>
+</dependency>
 	<!-- https://mvnrepository.com/artifact/org.json/json -->
 	<dependency>
 	    <groupId>org.json</groupId>
@@ -36,12 +41,12 @@
 	<dependency>
     <groupId>org.apache.logging.log4j</groupId>
     <artifactId>log4j-api</artifactId>
-    <version>2.11.1</version>
+    <version>2.13.2</version>
   </dependency>
   <dependency>
     <groupId>org.apache.logging.log4j</groupId>
     <artifactId>log4j-core</artifactId>
-    <version>2.11.1</version>
+    <version>2.13.2</version>
   </dependency>
   </dependencies>
   <build>
